# sevenLang

./: README.org  shell.nix
Kubernetes/KubernetesForAbsoluteBeginners/replicasets/: nginxReplicaSet.yaml
alloy/: README.org
cpp/learnMultithreadingWithModernCPP/src/: readme.md
cpp/learnMultithreadingWithModernCPP/src/IntroductionToConcurrency/: CMakeLists.txt  child.cpp  child.h  main.cpp
dailyCodingProblem/: .envrc  day1.py  day2.py
dbs/: README.md
io/: README.org  hello_world.io
java/GATech_DSnA_I/HW01/: ArrayList.java  ArrayListTest.java
java/GATech_DSnA_I/HW02/: SinglyLinkedList.java  SinglyLinkedListNode.java  SinglyLinkedListTest.java
java/GATech_DSnA_I/HW03/: ArrayQueue.java  ArrayQueueTest.java
java/GATech_DSnA_I/lesson2/: LinkedList.java  RemoveDuplicates.java
java/GATech_DSnA_II/HW04/: Traversals.java  TraversalsTest.java
java/GATech_DSnA_II/HW05/: BST.java  BSTNode.java  BSTTest.java
java/GATech_DSnA_II/HW06/: MinHeap.java  MinHeapTest.java
prolog/: README.org  books.pl  bubble.pl  concatenate.pl  family.pl  fibonacci.pl  food.pl  friends.pl  listReverse.pl  literate.org  math.pl  music.pl  ohmy.pl  smallest.pl  sudoku4.pl  sudoku9.pl
ruby/: grep.rb  guessNumber.rb  helloWorld.rb  literate.org  newTree.rb  to_file.rb  tree.rb
sCASP/: financial_advisor.pl
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: euler1.ts  euler2.ts  euler3.ts  euler4.ts  euler5.ts  index.ts
typescript/tests/: dummy.test.ts
web/portfolio_sidebar/: index.html  main.css
web/style_conference/: index.html  style.css
(+92 files in other folders)
